// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> renders at each size renders at size 200, multiLine=false 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 14px;
  letter-spacing: 0;
  line-height: 1.2;
}

*:not(style)~.emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 200, multiLine=true 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: reset;
  white-space: normal;
  font-size: 14px;
  letter-spacing: 0;
  line-height: 1.2;
}

*:not(style)~.emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 300, multiLine=false 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  letter-spacing: 0;
  line-height: 1.2;
}

*:not(style)~.emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 300, multiLine=true 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: reset;
  white-space: normal;
  font-size: 16px;
  letter-spacing: 0;
  line-height: 1.2;
}

*:not(style)~.emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 400, multiLine=false 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 18px;
  letter-spacing: 0;
  line-height: 1.2;
}

*:not(style)~.emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 400, multiLine=true 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: reset;
  white-space: normal;
  font-size: 18px;
  letter-spacing: 0;
  line-height: 1.2;
}

*:not(style)~.emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 500, multiLine=false 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 20px;
  letter-spacing: 0;
  line-height: 1.2;
}

*:not(style)~.emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 500, multiLine=true 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: reset;
  white-space: normal;
  font-size: 20px;
  letter-spacing: 0;
  line-height: 1.2;
}

*:not(style)~.emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 600, multiLine=false 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 24px;
  letter-spacing: -0.5px;
  line-height: 1.2;
}

*:not(style)~.emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 600, multiLine=true 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: reset;
  white-space: normal;
  font-size: 24px;
  letter-spacing: -0.5px;
  line-height: 1.2;
}

*:not(style)~.emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 650, multiLine=false 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 28px;
  letter-spacing: -0.5px;
  line-height: 1.2;
}

*:not(style)~.emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 650, multiLine=true 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: reset;
  white-space: normal;
  font-size: 28px;
  letter-spacing: -0.5px;
  line-height: 1.2;
}

*:not(style)~.emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 700, multiLine=false 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 32px;
  letter-spacing: -0.5px;
  line-height: 1.2;
}

*:not(style)~.emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 700, multiLine=true 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: reset;
  white-space: normal;
  font-size: 32px;
  letter-spacing: -0.5px;
  line-height: 1.2;
}

*:not(style)~.emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 800, multiLine=false 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 40px;
  letter-spacing: -1px;
  line-height: 1.2;
}

*:not(style)~.emotion-0 {
  margin-top: 24px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 800, multiLine=true 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: reset;
  white-space: normal;
  font-size: 40px;
  letter-spacing: -1px;
  line-height: 1.05;
}

*:not(style)~.emotion-0 {
  margin-top: 24px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 900, multiLine=false 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 50px;
  letter-spacing: -1px;
  line-height: 1.2;
}

*:not(style)~.emotion-0 {
  margin-top: 24px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 900, multiLine=true 1`] = `
.emotion-0 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  color: rgb(5, 25, 45);
  font-weight: 800;
  margin: 0;
  overflow: reset;
  white-space: normal;
  font-size: 50px;
  letter-spacing: -1px;
  line-height: 1.05;
}

*:not(style)~.emotion-0 {
  margin-top: 24px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;
